--- a/Day1/index.html
+++ b/Day1/index.html
@@ -79,7 +79,7 @@
         <main id="main">
          <div id="card">
            <div id="img">
-            <img src="gloss.jpg" alt="img" width="300px">
+            <img src="Images/gloss.jpg" alt="img" width="300px">
            </div>   
            <div id="heading">
             Lip Oil Lumina Luxe 
