--- a/Day2/index.html
+++ b/Day2/index.html
@@ -167,15 +167,15 @@
             <div class="content">
                 <h1>Content</h1>
                  <div class="flavours"> 
-                    <img src="strawberry.png" alt="" width="45px">
+                    <img src="Images/strawberry.png" alt="" width="45px">
                  </div> 
                  <p id="desc1" class="flavoursDescripton">lorem ipsum</p>
                  <div class="flavours">
-                    <img src="plum.png" alt="" width="42px">
+                    <img src="Images/plum.png" alt="" width="42px">
                  </div>
                  <p id="desc2" class="flavoursDescripton">lorem ipsum</p>
                  <div class="flavours">
-                    <img src="orange.png" alt="" width="42px">
+                    <img src="Images/orange.png" alt="" width="42px">
                  </div>
                  <p id="desc3" class="flavoursDescripton">lorem ipsum</p>
             </div>
@@ -191,7 +191,7 @@
              <div id="box1"></div> <!--small box-->
              <div id="box2"></div> <!--bottom big box-->
              <div id="box3">
-                <img src="jui-removebg-preview.png" alt="" width="200px">
+                <img src="Images/jui-removebg-preview.png" alt="" width="200px">
              </div>
           </main>
      
