--- a/Day4/index.html
+++ b/Day4/index.html
@@ -54,7 +54,7 @@
 <body>
     <div class="container">
         <div class="box box-1">
-            <header><img src="mountain card.jpg" alt="" height="195px"></header>
+            <header><img src="Images/mountain card.jpg" alt="" height="195px"></header>
             <main>
                 <div><h3>Travel</h3></div>
                 <div><h1>Mountains</h1></div>
@@ -63,7 +63,7 @@
             </main>
         </div>
         <div class="box box-2">
-            <header><img src="city.jpg" alt="" height="195px"></header>
+            <header><img src="Images/city.jpg" alt="" height="195px"></header>
             <main>
             <div><h3>Travel</h3></div>
                 <div><h1>City</h1></div>
@@ -72,7 +72,7 @@
             </main>
         </div>
         <div class="box box-3">
-            <header><img src="coast.jpg" alt="" height="200px"></header>
+            <header><img src="Images/coast.jpg" alt="" height="200px"></header>
             <main>
             <div><h3>Travel</h3></div>
                 <div><h1>Coast</h1></div>
