--- a/Day5/index.html
+++ b/Day5/index.html
@@ -133,7 +133,7 @@ background-image: linear-gradient(90deg, #ff8bc5 0%, #FF6A88 55%, #FF99AC 100%);
                      <button>Discover ></button>           
                     </div>
                      
-                <img src="Untitled_design-removebg-preview.png" alt="">
+                <img src="Images/perfume.png">
     
             </main>
           </div>
