--- a/Day7/index.html
+++ b/Day7/index.html
@@ -20,12 +20,12 @@
     </header>
      <main>
         <div class="conatiner">
-            <img src="spoons.png" alt="" id="spoon">
-            <img src="veg.png" alt="" id="veg">
-            <div id="circle"><img src="bg.jpg" alt="" width="800px"></div>
-            <img src="dumplings.png" alt="" width="740px" id="Dumplings">
-            <img src="sauce.png" alt="" id="sauce" width="200px">
-            <img src="spices.png" alt="" id="spices">
+            <img src="Images/spoons.png" alt="" id="spoon">
+            <img src="Images/veg.png" alt="" id="veg">
+            <div id="circle"><img src="Images/bg.jpg" alt="" width="800px"></div>
+            <img src="Images/dumplings.png" alt="" width="740px" id="Dumplings">
+            <img src="Images/sauce.png" alt="" id="sauce" width="200px">
+            <img src="Images/spices.png" alt="" id="spices">
 
             <div class="textbox">
                    <p id="mainText">Take a taste <br> Come join us. <br><span id="quote">Life is so endlessly delicious</span></p>
