--- a/skin-care-project/index.html
+++ b/skin-care-project/index.html
@@ -39,7 +39,7 @@
                  <button>Shop Now</button>
             </div>
             <div class="right">
-                <img src="cpy.png" alt="">
+                <img src="images/cpy.png" alt="">
             </div>
 
         </div>
@@ -49,9 +49,9 @@
             <h2>Shale your nails according to ur <br> wish</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi illum omnis illo! Dolorem, molestias fugiat nesciunt debitis exercitationem, adipisci.</p>
             <div class="icon">
-                <p><img src="truck.png" alt="" height="60px"><div class="text">Speedy & Safety Delivery</div></p>
-                <p><img src="box.png" height="60px"> <div class="text">Orders $100 Ship Free</div></p>
-                <p><img src="card.png" alt="" height="60px"> <div class="text">Happiness Guarantee</div></p>
+                <p><img src="images/truck.png" alt="" height="60px"><div class="text">Speedy & Safety Delivery</div></p>
+                <p><img src="images/box.png" height="60px"> <div class="text">Orders $100 Ship Free</div></p>
+                <p><img src="images/card.png" alt="" height="60px"> <div class="text">Happiness Guarantee</div></p>
 
             </div>
         </div>
@@ -65,7 +65,7 @@
         <div class="nailsBox">
             <div class="nBox1">
                 <div class="nImg">
-                    <img src="images (2).jpeg" alt="">
+                    <img src="images/images (2).jpeg" alt="">
                 </div>
                 <div class="nailInfo">
                       <h2>Allure Glossy Nails</h2>
@@ -82,7 +82,7 @@
             </div>
             <div class="nBox1">
                 <div class="nImg">
-                    <img src="img4.webp" alt="">
+                    <img src="images/img4.webp" alt="">
                 </div>
                 <div class="nailInfo">
                       <h2>Dainty Glossy Nails</h2>
@@ -99,7 +99,7 @@
             </div>
             <div class="nBox1">
                 <div class="nImg">
-                    <img src="image 3.jpg" alt="">
+                    <img src="images/image 3.jpg" alt="">
                 </div>
                 <div class="nailInfo">
                       <h2>Splash Glossy Nails</h2>
@@ -116,7 +116,7 @@
             </div>
             <div class="nBox1">
                 <div class="nImg">
-                    <img src="lastimg.jpeg" alt="">
+                    <img src="images/lastimg.jpeg" alt="">
                 </div>
                 <div class="nailInfo">
                       <h2>Envy Glossy Nails</h2>
@@ -140,7 +140,7 @@
             <h3><a href="">READ MORE</a></h3>
         </div>
         <div class="right">
-            <img src="blogPic.jpg" alt="">
+            <img src="images/blogPic.jpg" alt="">
         </div>
 
     </div>
@@ -155,7 +155,7 @@
         </div>
         <div class="bottom">
             <div class="left">
-                <h2><img src="Screenshot (460).png" height="80px">NELLIE</h2>
+                <h2><img src="images/Screenshot (460).png" height="80px">NELLIE</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum quis ad corrupti sapiente voluptatum fuga hic quisquam esse eligendi obcaecati nulla ducimus autem quia.</p>
             </div>
             <div class="right">
