--- a/SavingsCalculator/index.html
+++ b/SavingsCalculator/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="card">
             <div class="left">
-                <img src="card.png" alt="">
+                <img src="Images/card.png" alt="">
                 <h3>END BALANCE:</h3>
                 <div id="resultBox">
                     <h1 id="res">$0.00</h1>
